Filtro por etiqueta y contactar emprendedor ya son funcionales
Agregué el filtro del home por etiquetas e implementé un bottom sheet para contactar al emprendedor en la actividad detalles. Las imagenes de las campañas de crowdfunding ahora se cargan mediante una url proporcionada por la base de datos. Quité la navbar y el mínimo de inversión porque no llegamos a tiempo

--- a/Fintech_NoCountry/app/src/main/res/values/strings.xml
+++ b/Fintech_NoCountry/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="crowd_restantes">DÍAS MÁS</string>
     <string name="crowd_financiado">FINANCIADO</string>
     <string name="crowd_recaudado">RECAUDADO</string>
-
+    <string name="contacto_titulo">Mensaje enviado</string>
+    <string name="contacto_texto">El emprendedor se pondrá en contacto contigo</string>
 </resources>
