Login y Registro ya funcionales
Agregué el login y el registro. La mainActivity pasa a ser la primer actividad en iniciarse. Si el usuario ya inició sesión, se redirige directamente al home. Se puede cerrar sesión desde la activity PerfilMas, que se inicia desde la toolbar del home.

--- a/Fintech_NoCountry/app/src/main/res/values/strings.xml
+++ b/Fintech_NoCountry/app/src/main/res/values/strings.xml
@@ -12,4 +12,10 @@
     <string name="crowd_recaudado">RECAUDADO</string>
     <string name="contacto_titulo">Mensaje enviado</string>
     <string name="contacto_texto">El emprendedor se pondrá en contacto contigo</string>
+
+    <string name="menu_perfil">Perfil</string>
+    <string name="menu_campanias">Mis campañas</string>
+
+    <string name="form_titulo">Solicitud enviada</string>
+    <string name="form_texto">Un administrador evaluará tu solicitud</string>
 </resources>
